Edit methods of Controller